--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,3 @@
-theme = dark:Ayu,light:Ayu Light
+theme = dark:GitHub Dark Default,light:GitHub Light Default
 font-family = Jetbrains Mono
 font-size = 12
