--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -38,86 +38,34 @@ $line_break\
 $character\
 """
 
-palette = 'default'
-
 [palettes.default]
 
-color_ok = 'bright-green'
-color_danger = 'bright-red'
-color_caution = 'bright-yellow'
+color_ok = 'color_02'
+color_danger = 'color_01'
+color_caution = 'color_03'
 
-color_os = 'red'
-color_username = 'red'
-color_directory = 'yellow'
-color_git = 'cyan'
-color_git_added = 'bright-green'
-color_git_deleted = 'bright-red'
-color_env = 'blue'
-color_kubernetes = 'purple'
-color_docker = 'blue'
-color_shell = ''
-color_container = ''
-color_other = ''
-color_time = ''
-color_duration = ''
+color_os = 'color_04'
+color_username = 'color_04'
+color_directory = 'color_07'
+color_git = 'color_02'
+color_git_added = 'color_02'
+color_git_deleted = 'color_01'
+color_env = 'color_04'
+color_kubernetes = 'color_05'
+color_docker = 'color_04'
+color_shell = 'color_08'
+color_container = 'color_01'
+color_other = 'color_08'
+color_time = 'color_07'
+color_duration = 'color_07'
 
-color_vimcmd_ok = 'green'
-color_vimcmd_replace = 'purple'
-color_vimcmd_visual = 'yellow'
-
-[palettes.gruvbox_dark]
-
-color_ok = '#b8bb26'
-color_danger = '#fb4934'
-color_caution = '#d79921'
-
-color_os = '#d65d0e'
-color_username = '#d65d0e'
-color_directory = '#d79921'
-color_git = '#689d6a'
-color_git_added = '#b8bb26'
-color_git_deleted = '#fb4934'
-color_env = '#458588'
-color_kubernetes = '#b16286'
-color_docker = '#458588'
-color_shell = '#a89984'
-color_container = '#cc241d'
-color_other = '#d5c4a1'
-color_time = '#fbf1c7'
-color_duration = '#fbf1c7'
-
-color_vimcmd_ok = '#8ec07c'
-color_vimcmd_replace = '#b16286'
-color_vimcmd_visual = '#d79921'
-
-[palettes.gruvbox_light]
-
-color_ok = '#79740e'
-color_danger = '#9d0006'
-color_caution = '#d79921'
-
-color_os = '#d65d0e'
-color_username = '#d65d0e'
-color_directory = '#d79921'
-color_git = '#689d6a'
-color_git_added = '#79740e'
-color_git_deleted = '#9d0006'
-color_env = '#458588'
-color_kubernetes = '#b16286'
-color_docker = '#458588'
-color_shell = '#7c6f64'
-color_container = '#cc241d'
-color_other = '#504945'
-color_time = '#282828'
-color_duration = '#282828'
-
-color_vimcmd_ok = '#689d6a'
-color_vimcmd_replace = '#b16286'
-color_vimcmd_visual = '#d79921'
+color_vimcmd_ok = 'color_02'
+color_vimcmd_replace = 'color_05'
+color_vimcmd_visual = 'color_03'
 
 [os]
 disabled = false
-style = "fg:color_os"
+style = "fg:blue"
 format = '[$symbol]($style)'
 
 [os.symbols]
@@ -145,14 +93,14 @@ Pop = ""
 
 [username]
 show_always = true
-style_user = "fg:color_username"
-style_root = "bold fg:color_danger"
+style_user = "fg:blue"
+style_root = "bold fg:red"
 format = '[ $user ]($style)'
 
 [directory]
-style = "fg:color_directory"
-read_only_style = "fg:color_directory"
-repo_root_style = "bold fg:color_directory"
+style = "fg:bright-white"
+read_only_style = "fg:bright-white"
+repo_root_style = "bold fg:bright-white"
 format = "[ $path ]($style)"
 read_only = " "
 home_symbol = "~"
@@ -164,7 +112,7 @@ use_logical_path = true
 
 [git_branch]
 symbol = ""
-style = "fg:color_git"
+style = "fg:green"
 format = '( [$symbol $branch]($style) )'
 only_attached = true
 ignore_branches = []
@@ -174,7 +122,7 @@ always_show_remote = false
 disabled = false
 
 [git_commit]
-style = "fg:color_git"
+style = "fg:green"
 format = "( [($tag)(@$hash)]($style) )"
 commit_hash_length = 7
 only_detached = true
@@ -183,7 +131,7 @@ tag_disabled = false
 disabled = false
 
 [git_status]
-style = "fg:color_git"
+style = "fg:green"
 format = '([$ahead_behind]($style) )([$all_status]($style) )'
 stashed = "*${count}"
 ahead = "⇡${count}"
@@ -200,14 +148,14 @@ ignore_submodules = false
 disabled = false
 
 [git_metrics]
-format = '([([+$added]($added_style))([-$deleted]($deleted_style))](fg:color_git) )'
-added_style = "fg:color_git_added"
-deleted_style = "fg:color_git_deleted"
+format = '([([+$added]($added_style))([-$deleted]($deleted_style))](fg:green) )'
+added_style = "fg:green"
+deleted_style = "fg:red"
 only_nonzero_diffs = true
 disabled = false
 
 [git_state]
-style = "fg:color_danger"
+style = "fg:red"
 format = '([$state( $progress_current/$progress_total)]($style bold) )'
 rebase = "REBASING"
 merge = "MERGING"
@@ -220,64 +168,64 @@ disabled = false
 
 [nodejs]
 symbol = ""
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [c]
 symbol = ""
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [rust]
 symbol = "󱘗"
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [golang]
 symbol = "󰟓"
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [php]
 symbol = ""
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [java]
 symbol = ""
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [kotlin]
 symbol = ""
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [haskell]
 symbol = ""
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [python]
 symbol = ""
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)( $virtualenv)]($style) )'
 version_format = '${raw}'
 
 [package]
 disabled = false
 symbol = "󰏗"
-style = "fg:color_env"
+style = "fg:blue"
 format = '( [$symbol( $version)]($style) )'
 
 [docker_context]
 symbol = ""
-style = "fg:color_docker"
+style = "fg:blue"
 format = '( [$symbol( $context)]($style) )'
 
 [kubernetes]
 symbol = "󱃾"
-style = "fg:color_kubernetes"
+style = "fg:magenta"
 format = '( [($symbol( $cluster))]($style) )'
 disabled = false
 
@@ -296,15 +244,15 @@ xonsh_indicator = "xonsh"
 cmd_indicator = "cmd"
 nu_indicator = "nu"
 unknown_indicator = ""
-style = "fg:color_shell"
+style = "fg:bright-black"
 
 [container]
-style = "fg:color_container"
+style = "fg:red"
 format = '( [$symbol $name]($style) )'
 
 [jobs]
 symbol = "󰒋"
-style = "fg:color_other"
+style = "fg:bright-black"
 format = '( [$symbol( $number)]($style) )'
 symbol_threshold = 1
 number_threshold = 1
@@ -319,7 +267,7 @@ disabled = false
 [memory_usage]
 threshold = 0
 symbol = "󰓅"
-style = "fg:color_other"
+style = "fg:bright-black"
 format = '( [$symbol( ${ram})]($style) )'
 disabled = false
 
@@ -349,26 +297,26 @@ disabled = false
 
 [[battery.display]]
 threshold = 10
-style = "bold fg:color_danger"
+style = "bold fg:red"
 
 [[battery.display]]
 threshold = 20
-style = "fg:color_caution"
+style = "fg:yellow"
 
 [[battery.display]]
 threshold = 100
-style = "fg:color_other"
+style = "fg:bright-black"
 
 [time]
 disabled = false
 time_format = "%R"
-style = "fg:color_time"
+style = "fg:bright-white"
 format = '( [󰔛 $time]($style) )'
 
 [cmd_duration]
 min_time = 2000
 format = '( [󱫑 $duration]($style) )'
-style = 'fg:color_duration'
+style = 'fg:bright-white'
 show_milliseconds = false
 disabled = false
 
@@ -383,7 +331,7 @@ not_executable_symbol = '󰂭'
 not_found_symbol = '󰍉'
 sigint_symbol = '󰐊'
 signal_symbol = '󱐋'
-style = 'bold fg:color_danger'
+style = 'bold fg:red'
 recognize_signal_code = true
 
 [line_break]
@@ -391,12 +339,12 @@ disabled = false
 
 [character]
 disabled = false
-success_symbol = '[❯](bold fg:color_ok)'
-error_symbol = '[❯](bold fg:color_danger)'
-vimcmd_symbol = '[❮](bold fg:color_vimcmd_ok)'
-vimcmd_replace_one_symbol = '[❮](bold fg:color_vimcmd_replace)'
-vimcmd_replace_symbol = '[❮](bold fg:color_vimcmd_replace)'
-vimcmd_visual_symbol = '[❮](bold fg:color_vimcmd_visual)'
+success_symbol = '[❯](bold fg:green)'
+error_symbol = '[❯](bold fg:red)'
+vimcmd_symbol = '[❮](bold fg:green)'
+vimcmd_replace_one_symbol = '[❮](bold fg:magenta)'
+vimcmd_replace_symbol = '[❮](bold fg:magenta)'
+vimcmd_visual_symbol = '[❮](bold fg:yellow)'
 
 [custom.keyboard_layout]
 command = """
@@ -417,7 +365,7 @@ fi
 
 """
 symbol = "󰌌"
-style = "fg:color_other"
+style = "fg:bright-black"
 format = '( [$symbol $output]($style) )'
 when = '[ "${STARSHIP_COCKPIT_KEYBOARD_LAYOUT_ENABLED:-false}" = "true" ]'
 shell = "sh"
